batch domain object model refactoring